// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Language/LanguageFlag render 1`] = `
.c0 {
  background: url("//images.kiwi.com/flags/24x0/flag-gb.jpg");
  height: 13px;
  border-radius: 2px;
  width: 24px;
  margin-right: 8px;
  xdisplay: block;
}

<i
  className="c0"
  scale={1}
/>
`;

exports[`#Language/LanguageFlag render with scale 1`] = `
.c0 {
  background: url("//images.kiwi.com/flags/24x0/flag-gb.jpg");
  height: 13px;
  border-radius: 2px;
  width: 24px;
  margin-right: 8px;
  xdisplay: block;
}

<i
  className="c0"
  scale={0.5}
/>
`;
